# shadow-compass

./: README.md  pyproject.toml
resources/: .gitignore  additional_i18n.json  script.js  style.css
scripts/: extract_images.py
shadow_compass/: __main__.py  game_config.py  game_db.py  loc.py  parser.py  prop.py  resources.py  sudanjson.py
shadow_compass/exporter/: html.py
shadow_compass/schema/: after_story.py  card.py  common.py  condition.py  effect.py  enums.py  event.py  formula.py  gallery_card.py  loot.py  outcome.py  over.py  quest.py  reference.py  rite.py  rite_template.py  style.py  tag.py  upgrade.py
shadow_compass/templates/: _macros.html  base.html  card_index.html  card_view.html  ending_index.html  ending_view.html  event_index.html  event_view.html  index.html  loot_index.html  loot_view.html  objective_index.html  objective_view.html  rite_index.html  rite_view.html  tag_index.html  tag_view.html  upgrade_index.html  upgrade_view.html
